--- a/Ini.cfg
+++ b/Ini.cfg
@@ -1,4 +1,9 @@
-1	Alpenmilch	IniPics\Alpenmilch\4.png
-2	Fritt		IniPics\Fritt\4.png
-3	Joghurt		IniPics\Joghurt\4.png
-
+1	Alpenmilch	refimg/Alpenmilch.png
+2	Fritt	refimg/Fritt.png
+3	Joghurt	refimg/Joghurt.png
+4	KatzenOhren	refimg/KatzenOhren.png
+5	KitKat	refimg/KitKat.png
+6	Knusperflakes	refimg/Knusperflakes.png
+7	Lakritz	refimg/Lakritz.png
+9	Yogurette	refimg/Yogurette.png
+8	Schluempfe	refimg/Schluempfe.png
